# VoxelIO

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md  cmake_install.cmake  flake.nix  launch.json
app/: CMakeLists.txt  Makefile  app.cpp  cmake_install.cmake
assets/model/gnomie/: license.txt  scene.gltf
assets/model/kermit/: license.txt  scene.gltf
assets/model/mandy/: license.txt  scene.gltf
assets/model/wifu/: license.txt  scene.gltf
assets/shader/basic/: fragment.glsl  vertex.glsl
assets/shader/box/: fragment.glsl  vertex.glsl
assets/shader/cubemap/: fragment.glsl  vertex.glsl
assets/shader/default/: fragment.glsl  vertex.glsl  vertext.glsl
assets/shader/instanced_voxel/: fragment.glsl  vertex.glsl
assets/shader/lightblock/: fragment.glsl
assets/shader/model/: fragment.glsl
assets/shader/voxel/: fragment.glsl  vertex.glsl
assets/shader/water/: fragment.glsl  vertex.glsl
core/: CMakeLists.txt  Makefile  cmake_install.cmake
core/engine/: GameEngine.cpp  GameEngine.h
core/game/: Game.cpp  Game.h
core/gameplay/: Button.h  Chunk.cpp  Chunk.h  Collision.cpp  Collision.h  Command.cpp  Command.h  Noise.cpp  Noise.h  State.cpp  State.h  Terrain.h  Terrain.hpp  db_perlin.cpp  db_perlin.h
core/generator/: ChunkGenerator.cpp  ChunkGenerator.h  Generator.hpp
core/graphics/: Cubemap.cpp  Cubemap.h  Lightable.hpp  Lighting.cpp  Lighting.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SSBO.cpp  SSBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  model.h
core/manager/: AssetManager.cpp  AssetManager.h  Cache.h  CameraHandler.cpp  CameraHandler.h  ChunkManager.cpp  ChunkManager.h  InputManager.cpp  InputManager.h  WindowManager.cpp  WindowManager.h
core/model/: Box.cpp  Box.h  Camera.cpp  Camera.h  CrossHair.hpp  Entity.cpp  Entity.h  Game.cpp  Game.h  Gnome.hpp  Kermit.hpp  LightBlock.hpp  Player.cpp  Player.h  PointLightBuffer.cpp  PointLightBuffer.h  Skybox.cpp  Skybox.h  Triangle.cpp  Triangle.h  Voxel.cpp  Voxel.h  VoxelTerrain.cpp  VoxelTerrain.h  Waifu.cpp  Waifu.h  WaterTerrain.hpp
include/GLFW/: glfw3.h
include/glad/: glad.h
include/glm/gtx/: rotate_vector.inl
include/stb/: stb_image.h
